# SemanticCache

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  start-local.sh  start.sh
.github/workflows/: publish.yml
app/: cli.py  config.py  dependencies.py  main.py
app/metrics/: __init__.py  base.py  memory_store.py  redis_store.py
app/models/: schemas.py
app/routes/: cache.py
app/services/: cache.py  stats.py
app/vectorstore/: __init__.py  base.py  memory_store.py  redis_store.py  similarity.py
client/: __init__.py  errors.py  semcache.py
docs/superpowers/plans/: 2026-06-25-model-aware-caching.md  2026-06-25-query-stats.md  2026-06-27-client-wrapper.md  2026-06-28-docker-free-startup.md  2026-06-28-one-command-startup.md
docs/superpowers/specs/: 2026-06-25-model-aware-caching-design.md  2026-06-25-query-stats-design.md  2026-06-27-client-wrapper-design.md  2026-06-28-docker-free-startup-design.md  2026-06-28-one-command-startup-design.md
examples/: .env.example  README.md  llm_cache_demo.py
integrations/: langchain_semcache.py
tests/: test_api.py  test_cache_service.py  test_cli.py  test_client.py  test_dependencies.py  test_langchain_adapter.py  test_memory_store.py  test_metrics_store.py  test_similarity.py  test_stats.py
tests/integration/: conftest.py  test_langchain_rag.py  test_redis_metrics.py  test_redis_store.py
