[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "semcache"
version = "0.1.0"
description = "Generic semantic caching microservice for LLM applications"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "redis>=5.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
client = [
    "httpx>=0.27",
]
langchain = [
    "langchain-core>=0.2",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "langchain-core>=0.2",
]

[project.scripts]
semcache = "app.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires a live redis-stack (run with -m integration; skip with -m 'not integration')",
]

[tool.setuptools.packages.find]
include = ["app*", "client*", "integrations*"]
